--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -28,7 +28,7 @@
   --color-accent-950: #382814;
 }
 
-/* @layer components {
+@layer components {
     .spinner {
       margin: 3.2rem auto 1.6rem;
       width: 60px;
@@ -56,12 +56,9 @@
     }
   } */
   
-  /* For data picker */
-
-  /* 
   .rdp {
     --rdp-cell-size: 32px !important;
     --rdp-accent-color: theme('colors.accent.500') !important;
     --rdp-background-color: theme('colors.accent.600') !important;
     margin: 0 !important;
-  } */
+  }
